# lights

./: .gitignore  .gitignore.swp  CMakeLists.txt
basic-lighting/: CMakeLists.txt
basic-material/: CMakeLists.txt
data/: deer.gltf  vks_shadow.gltf
inc/: tmath.h  tvec.h
osg/: CMakeLists.txt
osg/anti_alias/: CMakeLists.txt
osg/anti_alias/fxaa/: CMakeLists.txt  testNode.cpp
osg/anti_alias/glsl/: fxaa.glsl
osg/anti_alias/msaa/: CMakeLists.txt  testNode.cpp  testNode.h
osg/anti_alias/smaa/: CMakeLists.txt  main.cpp  smaa_blend.frag  smaa_weight.frag  testNode.cpp  testNode.h
osg/anti_alias/taa/: CMakeLists.txt  main.cpp  testNode.cpp
osg/anti_alias/taa/glsl/: taa_frag.glsl  vel_vert.glsl
osg/basic/: CMakeLists.txt
osg/basic-lighting/: CMakeLists.txt
osg/basic-material/: CMakeLists.txt
osg/basic/interpolation/: CMakeLists.txt
osg/demo/: CMakeLists.txt
osg/demo/blend/: BlendNode.cpp  BlendNode.h  CMakeLists.txt  main.cpp
osg/demo/glsl/: blend.frag  blend.vert  noise.glsl
osg/demo/grass/: CMakeLists.txt  grass.comp  grass.frag  grass.tese  grass.vert  main.cpp  testNode.cpp  testNode.h
osg/demo/noise/: CMakeLists.txt  noise.frag  noise.glsl  noise.vert  simplex_noise.frag  testNode.cpp  testNode.h  worley.frag  worley_noise.frag
osg/demo/ssao/: CMakeLists.txt  blur.frag  geom.frag  geom.vert  ssao.frag  ssao.vert  testNode.cpp  testNode.h
osg/demo/volume-cloud/: CMakeLists.txt  VCloudNode.cpp  VCloudNode.h  cloud.frag  main.cpp  noise.comp  testNode.cpp  worley_noise.frag
osg/pbr-ibl/: CMakeLists.txt
osg/pbr-ibl-lighting/: CMakeLists.txt  testNode.cpp
osg/pbr-ibl-lighting-rfl/: CMakeLists.txt  main.cpp  testNode.cpp  testNode.h
osg/pbr-ibl-lighting-tex/: .CMakeLists.txt.swp  CMakeLists.txt
osg/pbr-lighting/: CMakeLists.txt  testNode.cpp
osg/pbr-lighting-tex/: CMakeLists.txt
osg/pbr-lighting-tex-vn/: CMakeLists.txt
pbr-ibl/: CMakeLists.txt  testNode.cpp
pbr-ibl-lighting/: CMakeLists.txt  testNode.cpp
pbr-ibl-lighting-tex/: CMakeLists.txt
pbr-lighting/: CMakeLists.txt  testNode.cpp
pbr-lighting-tex/: CMakeLists.txt  main.cpp  testNode.cpp
pbr-lighting-tex-vn/: CMakeLists.txt
test/: main.cpp
vulkan/: CMakeLists.txt  VulkanView.cpp  VulkanView.h
vulkan/CBFR/: CMakeLists.txt  main.cpp
vulkan/TBDR/: CMakeLists.txt  main.cpp  pbr.frag  pbr.vert
vulkan/baselib/: BasicPipeline.cpp  BasicPipeline.h  CMakeLists.txt  DepthPersPipeline.cpp  DepthPersPipeline.h  DepthPipeline.cpp  DepthPipeline.h  GLTFLoader.cpp  GLTFLoader.h  HUDPass.cpp  HUDPipeline.cpp  HUDPipeline.h  HUDRect.cpp  Manipulator.cpp  Manipulator.h  MeshInstance.cpp  MeshInstance.h  MeshPrimitive.cpp  MeshPrimitive.h  RenderData.h  SceneData.h  SimpleShape.h  TexturePipeline.cpp  TexturePipeline.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanDef.h  VulkanDevice.cpp  VulkanDevice.h  VulkanImGUI.cpp  VulkanImGUI.h  VulkanImage.cpp  VulkanImage.h  VulkanInitializers.hpp  VulkanInstance.cpp  VulkanInstance.h  VulkanPass.cpp  VulkanPipeline.cpp  VulkanPipeline.h  VulkanSwapChain.cpp  (+9 more)
vulkan/baselib/imgui/: imgui_impl_vulkan.cpp
vulkan/baselib/shaders/: depth_pers.vert  hud.frag  hud.frag.spv  hud.vert  hud.vert.spv  pbr.frag  pbr_clr.frag  pbr_clr.vert  pbr_tex.frag  pbr_tex.vert
vulkan/basic_pbr/: CMakeLists.txt  VulkanView.cpp  VulkanView.h  main.cpp  pbr.frag  pbr.frag.spv  pbr.vert  pbr.vert.spv  test.frag  test.vert
vulkan/shadow/: CMakeLists.txt
vulkan/shadow/basic_shadowmap/: CMakeLists.txt  ShadowView.cpp
vulkan/shadow/perspective_shadowmap/: CMakeLists.txt  ShadowPipeline.cpp  ShadowView.cpp  ShadowView.h  imgui.ini  shadow.frag
vulkan/shadow/shadowmap/: CMakeLists.txt  ShadowPipeline.cpp  ShadowPipeline.h  ShadowTexPipeline.cpp  ShadowTexPipeline.h  ShadowView.cpp  ShadowView.h  depth.frag  depth.vert  imgui.ini  main.cpp  pbr.frag  pbr.vert  shadow.frag  shadow.vert
